Add a view for adding new graphs to datasheet (not functional yet)